Fix: Bug Fix: Elements no longer shift on round end. Adds timer to CPU turn. Issue: With addition of timer, WinCheck errors as well as turn interval errors.

--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -128,11 +128,10 @@ Containers
     /* border: 1px solid white; */
     width: 360px;
     height: 667px;
+    position: relative;
 }
 
-.end-of-round {
-    display: none;
-}
+
 
 /* .opponent-choice-buttons {
     flex-direction: row;
@@ -192,9 +191,9 @@ Containers
     height: 25%;
     align-items: center;
     justify-content: center;
-    margin: 0 0 0 -100%;
     z-index: 2;
     background-color: var(--bg-main);
+    position: absolute;
 }
 
 .end-of-round > * {
